--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">yuan </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/wen-zhang-lei-bie.html">文章类别</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -21,10 +22,10 @@
 <h1>Archives for yuan</h1>
 
 <dl>
-    <dt>周六 18 四月 2015</dt>
+    <dt>周六 06 八月 2016</dt>
+    <dd><a href="/helloworld.html">HelloWorld</a></dd>
+    <dt>周六 06 八月 2016</dt>
     <dd><a href="/test.html">test</a></dd>
-    <dt>周四 18 四月 2013</dt>
-    <dd><a href="/wen-zhang-biao-ti.html">文章标题</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
