--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">yuan </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/wen-zhang-lei-bie.html">文章类别</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
