--- a/test.html
+++ b/test.html
@@ -14,8 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">yuan </a></h1>
                 <nav><ul>
-                    <li><a href="/category/misc.html">misc</a></li>
-                    <li class="active"><a href="/category/wen-zhang-lei-bie.html">文章类别</a></li>
+                    <li class="active"><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -35,7 +34,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/yuan.html">yuan</a>
         </address>
-<p>In <a href="/category/wen-zhang-lei-bie.html">文章类别</a>.</p>
+<p>In <a href="/category/misc.html">misc</a>.</p>
 
 </footer><!-- /.post-info -->      <h3>test</h3>
 <p>adadas
