--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
 							<li><a href="https://y119777.github.io/about.html">About</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/hide.html">hide</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -106,10 +106,10 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>使用Pelican搭建博客系统</h2>
-	
+	<h2>About</h2>
+	<p><strong>兰生幽谷，不以无人而不芳</strong></p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/joey-huang.html">Joey Huang</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-07(Sunday) 22:20. Tags: <a href="https://y119777.github.io/tag/python.html">python</a>, <a href="https://y119777.github.io/tag/pelican.html">pelican</a>, </h6>
+	<h6>Post by <a href="https://y119777.github.io/author/joey-huang.html">Joey Huang</a> under <a href="https://y119777.github.io/category/hide.html">hide</a> on 2014-07-01(Tuesday) 00:00.</h6>
 </article>
 
 <hr/>
