--- a/build-blog-system-by-pelican.html
+++ b/build-blog-system-by-pelican.html
@@ -69,7 +69,7 @@
 							<li><a href="https://y119777.github.io/about.html">About</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
@@ -105,52 +105,23 @@
 					<div class="row">
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
-							<div class="row">
-								<div class="small-12 columns">
-									<h2>Archives</h2>
-								</div>
-							</div>
-	<div class="row">
-		<div class="small-10 columns small-centered">
-				<div class="row archive-year">
-					<div class="small-2 columns text-right">
-						<h3>2016</h3>
-					</div>
-				</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 08</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/build-blog-system-by-pelican.html">新学期，新气象~</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 07</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/about.html">About</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 06</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/helloworld.html">HelloWorld</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 06</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/test.html">test</a></h5>
-						</div>
-					</div>
-		</div>
-	</div>
+<article>
+	<h2>新学期，新气象~</h2>
+	<h2 id="_1">计划，安排</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;高温假结束（什么？还有高温假！），这算是新的学期开始吧！好好规划一下，这学期的计划，包括半年的，每月的，半月的以及每周的。当然首要的任务先是完成实验室的任务，然后再是自己的。</p>
+<h3 id="_2">大概如下：</h3>
+<ol>
+<li>做题，我感觉每天至少得写一些代码，至少得做一道题吧！</li>
+<li>每天写总结，如果没什么写的，就来这里灌水吧，或者写一些想法吧。</li>
+<li>赶紧找个<strong>女朋友</strong>！！！</li>
+<li>这学期的时间比较紧张，好好规划，做一些有意义的事情。</li>
+</ol>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;就这样吧，还有什么问题，再说吧！</p>
+	<hr/>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-08(Monday) 15:13. Tags: <a href="https://y119777.github.io/tag/diary.html">diary</a>, </h6>
+</article>
+
+<hr/>
 						</div>
 						<!-- End Main Content -->
 						<!-- Sidebar -->
