--- a/8-9-zong-jie.html
+++ b/8-9-zong-jie.html
@@ -69,8 +69,8 @@
 							<li><a href="https://y119777.github.io/about.html">About</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/hide.html">hide</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
@@ -106,10 +106,26 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>test hide</h2>
-	<h2 id="you-come-here">you come here!</h2>
+	<h2>8-9-总结</h2>
+	<h3 id="_1">七夕节，要什么女朋友，还是专心做题吧！（我也知道这是在骗自己，但是目前确实没有女朋友啊！）</h3>
+<p>今天终于动手开始做题了，沉寂了这么多天，每天想着做题，但是却没静下心来做题，一致在忙怎么搭博客的事情，搭好了，那就赶紧开始做吧！</p>
+<p>今天做的题目如下：</p>
+<ol>
+<li>Kth Smallest Element in a Sorted Matrix<br />
+- Combination Sum IV<br />
+- Combination Sum<br />
+- Combinations</li>
+</ol>
+<p>基本上都是搜索的题目，第一题之前做过查找的我记得是从右上角或者左下角开始二分查找，这次不知道怎么做，朴素的做法就是全部放入vector排序，但是这太笨，没有利用有序的性质，还是查答案了，就是维护大小为n的最小堆，然后找第k个数，注意边界条件。</p>
+<p>第二题，感觉很熟练，但是没做出来，考虑有序的计数，可以用普通的搜索的方法找出没序的情况，然后排列组合的办法求出总数，但是事实总是证明，这种方法是错误的，此路不通，考虑知道dp可以来计数，但没仔细思考，因为之前不知道一个组合的各种排列计数，就没想，查答案，就是计数，一般的，n作为一位，然后便利每一个数，统计，最后输出dp[n]，OK。</p>
+<p>第三题第一眼我还以为是计数，原来是求所有的组合情况，然后就用普通的搜索写法，我感觉我的这种的写法，在不知道数据范围的情况下，在leetcode的情况下，写法很丑，明天查一下怎么正确写。</p>
+<p>第四题就是第三题缩小版，普通的搜索，记录，深搜，还原，基本上就是这样的套路。</p>
+<h2 id="_2">总结</h2>
+<p>还是多多联系搜索的写法，如果不知道其他写法，那就搜索，再加上一些heuristic的剪枝， apac就有这样的提。</p>
+<p>还有就是<strong>多练，多做，多见识，多思考，才能提高</strong>，空想是不行的。<br />
+加油！这也算是每天的乐趣吧！</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/hide.html">hide</a> on 2016-08-09(Tuesday) 08:47.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-09(Tuesday) 22:35. Tags: <a href="https://y119777.github.io/tag/leetcode.html">leetcode</a>, </h6>
 </article>
 
 <hr/>
