--- a/tu-pian-ce-shi.html
+++ b/tu-pian-ce-shi.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -108,14 +108,11 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>test</h2>
-	<h3 id="test">test</h3>
-<p>adadas<br />
-1. a<br />
-2. b<br />
-3. c</p>
+	<h2>图片测试</h2>
+	<h2 id="_1">自古深情留不住，总是套路得人心</h2>
+<p><img alt="test" src="https://raw.githubusercontent.com/smshen/MarkdownPhotos/master/Res/test.jpg" /></p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-06(Saturday) 00:00.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-10(Wednesday) 22:56.</h6>
 </article>
 
 <hr/>
