--- a/tu-pian-ce-shi.html
+++ b/tu-pian-ce-shi.html
@@ -110,7 +110,8 @@
 <article>
 	<h2>图片测试</h2>
 	<h2 id="_1">自古深情留不住，总是套路得人心</h2>
-<p><img alt="test" src="https://raw.githubusercontent.com/smshen/MarkdownPhotos/master/Res/test.jpg" /></p>
+<p><img alt="test" src="https://raw.githubusercontent.com/smshen/MarkdownPhotos/master/Res/test.jpg" /><br />
+<img alt="test1.jpeg" src="https://ooo.0o0.ooo/2016/08/10/57abcc86ef753.jpeg" /></p>
 	<hr/>
 	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-10(Wednesday) 22:56.</h6>
 </article>
