--- a/tu-pian-ce-shi.html
+++ b/tu-pian-ce-shi.html
@@ -114,7 +114,7 @@
 <img alt="test1.jpeg" src="https://ooo.0o0.ooo/2016/08/10/57abcc86ef753.jpeg" /></p>
 <h2 id="_2">本地图片</h2>
 <p><img alt="" src="image/test1.jpeg" /><br />
-<img alt="" src="test2.jpg" /></p>
+<img alt="" src="image/test2.jpg" /></p>
 	<hr/>
 	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-10(Wednesday) 22:56.</h6>
 </article>
