--- a/8-13-bu-zhi-dao-xie-shi-yao.html
+++ b/8-13-bu-zhi-dao-xie-shi-yao.html
@@ -70,7 +70,7 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
@@ -107,84 +107,39 @@
 					<div class="row">
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
-							<div class="row">
-								<div class="small-12 columns">
-									<h2>Archives</h2>
-								</div>
-							</div>
-	<div class="row">
-		<div class="small-10 columns small-centered">
-				<div class="row archive-year">
-					<div class="small-2 columns text-right">
-						<h3>2016</h3>
-					</div>
-				</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 13</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/8-13-bu-zhi-dao-xie-shi-yao.html">8-13-不知道些什么</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 12</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/8-12zong-jie.html">8-12总结</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 10</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/tu-pian-ce-shi.html">图片测试</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 09</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/8-9-zong-jie.html">8-9-总结</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 08</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/build-blog-system-by-pelican.html">新学期，新气象~</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 07</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/about.html">About</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 06</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/helloworld.html">HelloWorld</a></h5>
-						</div>
-					</div>
-					<div class="row archive-entry">
-						<div class="small-2 columns text-right">
-							<h5>Aug 06</h5>
-						</div>
-						<div class="small-10 columns">
-							<h5><a href="https://y119777.github.io/test.html">test</a></h5>
-						</div>
-					</div>
-		</div>
+<article>
+	<h2>8-13-不知道些什么</h2>
+	<h2 id="_1">没有梦想跟咸鱼有什么区别</h2>
+<h2 id="_2">有梦想谁都了不起</h2>
+<ul>
+<li>[ ] 今天的周报还没交呢！</li>
+</ul>
+<p>每天不知道写些什么东西，感觉还是抓住时间多做一些题吧！要是把做的每道题都写上来，那就太浪费时间了。那就把不会做的，或者有点心得体会的题贴上来吧！</p>
+<blockquote>
+<p>感觉还是不想写啊！怎么这么烦！</p>
+</blockquote>
+<p><img alt="" src="https://raw.githubusercontent.com/y119777/pelican_blog/master/images/8-13.jpg" /></p>
+	<hr/>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-13(Saturday) 22:19.</h6>
+</article>
+
+<hr/>
+<div class="row">
+	<div class="small-12 columns">
+		<h3>Comments</h3>
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+			var disqus_shortname = 'y119777';
+			(function() {
+				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 	</div>
+</div>
 						</div>
 						<!-- End Main Content -->
 						<!-- Sidebar -->
