--- a/8-19-summary.html
+++ b/8-19-summary.html
@@ -108,33 +108,26 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>8-12总结</h2>
-	<h2 id="_1">随便写写</h2>
-<h3 id="2016812130047">2016年8月12日13:00:47</h3>
-<p>好几天没写了，赶紧补一下。上次总结是8月9号，前天，昨天都没写。<br />
-按照惯例，开始写。</p>
-<p>这几天完成的题目如下：<br />
-1. Guess Number Higher or Lower II<br />
-2. Guess Number Higher or Lower<br />
-3. Find K Pairs with Smallest Sums</p>
-<p>就这集体吧，其他的不写了。 第二题和第三题很简单， 第二题简单二分，第三题跟上次的那个题， 计算sorted matrix kth smallest的相似，只不过矩阵需要重新计算，这题还有个问题，就是卡的比较严，比如一个数组是空的时候，也要输出， 所有数据组合数可能小于k，反正考虑的情况比较多。</p>
-<blockquote>
-<p>第一题没有做出来，查的答案，先写一下，当初是怎么思考的，刚开始是以为简单的二分，然后步行，接着看到tag是dp，然后就往dp上面靠拢，刚开始我以为计算（a, b）之间的最小代价为（1, b - a + 1）然后再加上次数乘以（a - 1）,但是，运行之后发现错误的，是因为次数乘以因子的大小无法控制， （a, b）的最小代价计算不是这样计算，需要采用单独枚举,然后就开始查答案了。</p>
-<p>看答案之后，一看，啊，是这样，当你上面的方法错误的时候， 就只能每个区间单独计算，所以不断枚举所有区间，利用计算出来的小区间，在区间长度时间内计算出来，最后返回所有区间的结果即可。这种形式的dp之前也遇到过，但也没总结，只是知道这种新式。</p>
-<p>感觉遇到题，还是分析不出贪心性质和最优子结构性质，不知道怎么利用贪心和动态规划的算法，只是知道是什么，但不知道怎么使用，这很麻烦，需要多分析题的性质， 还是对这2种算法的思想理解不透彻。多加思考。</p>
-</blockquote>
-<h3 id="_2">计划</h3>
-<ol>
-<li>leetcode至少要刷完一遍。</li>
-<li>做完usaco</li>
-<li>看完入门那本书</li>
-<li>去github上面参加开源项目，但我感觉都不会，也不知道参加哪个，怎么入手，好像有点困难。</li>
-<li>每天早上坚持看英语，主要是听力水平要提高。</li>
-</ol>
-<p>还有什么，以后有时间，再不上来吧！</p>
-<p>2016年8月12日13:20:59</p>
+	<h2>8-19-summary</h2>
+	<h3 id="d-upoctocattennis">你若安好，便是晴天~~~·:D :up::octocat::tennis:</h3>
+<p>好久没有写了，赶紧抓紧时间写一下。</p>
+<p>我相信用我的努力和坚持，一定会做出点什么，或者没有什么的话，我也是不留遗憾的！或许，你只想证明某些东西，面对别人的讽刺和嘲讽，我感觉人与人之间的信任到底在哪里，嘴上这么说，心里却不这样想，背后还议论纷纷，就像我这样！哎，何必在乎别人的说法和行为么，做好自己，everything is OK!</p>
+<p>今天下午吃完饭以后，感觉好累啊，感觉像虚脱了一样，稍微趴了一会，就睡着了！以后得加强锻炼，健康生活！真的真的好累！少一点套路，多一点真诚！少说多做！别要老挑别人的毛病，要赞美，很世故，很圆滑，但这就是社会。</p>
+<p>本来是周三晚上就要写总结的，是17号，但是那天刚好去打羽毛球了，外面还下了一点小雨，后来帮师哥做题，但是错过了网易有道的机试，好伤心啊！赶紧抓紧时间做一下这个题，网上可以查得到！那天虽然11点半才回去的，但感觉还是有点成绩的，以后多多帮忙，多帮助别人，感觉别人待你的态度都不一样了，就是这样！</p>
+<p>然后是周四，生活很平淡，就是这样，今天做了些什么了？我已经想不起来了，但我记得做的，晚上做了区间修改和点修改的题目，可以用线段树，树状数组来做，后来查了下自带的题解，用的sqrt decomposition和zkw线段树，<br />
+还是zkw线段是好使，效率高，但是递归的线段树范围更广，更容易编写。</p>
+<p>接着是今天，好颓废啊！中午回宿舍，收了下衣服。感觉今天什么也没干，用实验室gitlab也是不熟练，eclipse git感觉一点都不会使，不知道怎么创建分支，怎么拉，推，怎么pull request merge，尤其是关键的怎么解决conflic，是时候好好学习一下了，说好了参加github上面的开源项目，好好锻炼一下自己，学习编程规范，锻炼英语，刚好听昨晚舍友说的什么计划，要有项目，要有重大改进，要有自己的东西，这个必须有时间搞起来了。<strong>认真去完成这个，去github上面的开源项目</strong>.</p>
+<p>晚上做题，感觉还是自己不行，做的少，需要大量时间刷，来提高，但是感觉时间有限！了解了一下c++的字符串分割方法，strtok，find，substr，以及boost的正则表达式，分割split，然后想到了那天的shell的tr命令，把指定相同连续字符转化为一个，然后再用目标字符替换，很棒！</p>
+<p><em>祝姐姐生日快乐！</em> :cake::cake::cake::+1:</p>
+<p>贴一个有趣网站：<a href="https://octodex.github.com/">octocat</a></p>
+<p><img alt="" src="https://octodex.github.com/momtocat" /></p>
+<p>还有做题ac后，下面提示解法，我点开后居然还要掏钱才能看，不是只有掏钱做的题么，怎么还有掏钱看的答案，然后我就上网查了一下，发现一个有意思的知乎话题<a href="https://www.zhihu.com/question/421315f84">我是链接</a>，大神真是厉害，我希望我有时间也做一下，hackerrank，听他们讲，好像很有趣的样子，我也要刷分，我也要rank！感觉还是自己太菜。</p>
+<p><img alt="" src="https://raw.githubusercontent.com/y119777/pelican_blog/master/images/momtocat.png" /></p>
+<p>还要写点什么，对了，那天跟师弟讨论，或许，是我错了，我不应该那样，多听听别人的意见，看别人怎么说，不要一味的自以为是！</p>
+<p>最后，好好学习，天天向上！</p>
+<p>~~写完最后检查一下又没什么错别字！~~</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-12(Friday) 13:00.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-19(Friday) 22:10.</h6>
 </article>
 
 <hr/>
