--- a/8-23-1.html
+++ b/8-23-1.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -108,16 +108,28 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>HelloWorld</h2>
-	<div class="codehilite" style="background: #f8f8f8"><pre style="line-height: 125%"><span style="color: #008800">#include&lt;bits/stdc++.h&gt;</span>
-<span style="color: #AA22FF; font-weight: bold">using</span> <span style="color: #AA22FF; font-weight: bold">namespace</span> std;
-<span style="color: #00BB00; font-weight: bold">int</span> <span style="color: #00A000">main</span>() {
-    cout <span style="color: #666666">&lt;&lt;</span> <span style="color: #BB4444">&quot;Hello world!&quot;</span> <span style="color: #666666">&lt;&lt;</span> endl;
-    <span style="color: #AA22FF; font-weight: bold">return</span> <span style="color: #666666">1</span>;
-}
-</pre></div>
+	<h2>8-23-1</h2>
+	<h3 id="_1">加油</h3>
+<blockquote>
+<p>有梦想谁都了不起，没梦想跟咸鱼何异！</p>
+</blockquote>
+<p>本来说昨晚上做个总结的，结果却没做！昨晚上做完上周日leetcode contest，大概8点半左右，然后感觉没啥事，随便<br />
+做几道题，然后写一下总结就结束了，但是10点左右，突然想到cf有比赛了，而且没注册，我貌似记得比赛前5分钟关闭<br />
+注册，然后去看了看，谁知道比赛延迟了10分钟，刚好能比赛，然后就注册了，然后就去做题了，做题了，才做了2道，就<br />
+感觉脑袋晕的不行，一个是因为上午志愿活动彩排，好累的说，走了很多路，一个是这题根本没思路，还不愿意仔细思考，<br />
+所以就不想做了，这时候大概10点50了，然后就想着走了，然后就回宿舍了，在宿舍当然不会做任何事情，然后玩了会游戏，<br />
+洗洗就睡了。所以想着今天一大早，先来写一下总结，稍微算是人生的轨迹吧，亦或是做题的总结。</p>
+<ol>
+<li>上午去环保园参加志愿者彩排活动，本来是小队长，晚上怎么就说任命别人为小队长，怎么回事，哎，这种琐事，还是不思考好了，<br />
+越思考越麻烦。</li>
+<li>cf的比赛都是晚上，上次是9点05，但我错过了大概40分钟，昨天的是10点10，好像都是晚上11点，12点的样子，感觉好玩，这时候<br />
+大脑基本上空白了，也不愿意做题了，难道是叫我去宿舍做题。</li>
+<li>错过了周日的比赛，看来日程安排和提示，需要好好的安排一下，这周日的，千万不能错过。</li>
+<li>是时候规划，计划，安排，总结，掌握需要掌握的技能。</li>
+</ol>
+<p>应该就是这样吧，有什么忘记的，后来再添加上。</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-06(Saturday) 00:00.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-23(Tuesday) 09:04.</h6>
 </article>
 
 <hr/>
