--- a/8-24.html
+++ b/8-24.html
@@ -70,8 +70,8 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/hide.html">hide</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
@@ -108,10 +108,30 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>About</h2>
-	<h2 id="_1">贵在持之以恒！</h2>
+	<h2>8-24</h2>
+	<h3 id="_1">随便写写</h3>
+<blockquote>
+<p>今天看到微信推送github+hexo搭建建议博客，然后就想到了之前碰到的几个问题。</p>
+</blockquote>
+<ol>
+<li>我用的是pelican，emoji好像支持的不是很好啊。</li>
+<li>好像文件这个markdown支持的不是很好啊，</li>
+<li>还有一个问题是什么呢！查一下买就是加删除线的支持的不是很好。</li>
+</ol>
+<p>可以学习一下其他的，看一下，要不要转移到其他的上面。</p>
+<p>下面稍微讨论下这几天发生的事吧！<br />
+1. 昨天是周二，早上来了，写了总结，上午写完统计文件，下午见老师每来，就随便<br />
+搞了搞，感觉还是老师监督下才能干活，要不自己也不能坚持，所以，最好有队友一起，<br />
+这样一起提高，一起进步，一起监督，这样是最好的。<br />
+2. 昨天晚上好像什么也没搞，就随便查了查。<br />
+3. 今天上午去参加所庆活动，老师没来，下午也没见，老师出差去了，晚上自己也没去打<br />
+羽毛球，看了一晚上动漫，哎，自己好颓废啊，也不进步。<br />
+4. cf得好好刷，看看最后，自己的曲线怎么样，hr也好好做下吧，有时间，就参加！tc暂时<br />
+就不搞了，感觉好麻烦，还得下客户端，就这样，说的这么多，还不如自己动手好好实践呢！</p>
+<p>下面再贴一张猫的照片，这次最好记住图片的地址！当然，多大几次就记住了！</p>
+<p><img alt="我是图" src="https://raw.githubusercontent.com/y119777/pelican_blog/master/images/poptocat.png" /></p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/hide.html">hide</a> on 2016-08-07(Sunday) 16:12.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-24(Wednesday) 22:21.</h6>
 </article>
 
 <hr/>
