--- a/8-25.html
+++ b/8-25.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -108,14 +108,21 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>test</h2>
-	<h3 id="test">test</h3>
-<p>adadas<br />
-1. a<br />
-2. b<br />
-3. c</p>
+	<h2>8-25</h2>
+	<h3 id="_1">随便写写</h3>
+<p>今天星期四，晚上准时看完&lt;火影忍者&gt;，然后想着之前要找一下&lt;暗杀教室&gt;里面的一段的经典对话，看这些日本动漫，感觉真是一种享受，画面精美，bgm超赞，最重要的是寓意非常深刻，无不反映出生活的方方面面，真的是太棒了！</p>
+<p>下面摘自&lt;暗杀教室&gt;:</p>
+<blockquote>
+<p>你们在今后的人生中，必定会碰上被强大的社会洪流阻挠，无法得到理想结果的情况，届时，你们绝不能在社会上找原因，绝不能否定社会，说实话，那就是在浪费时间，这种时候呢，就要对自己说：社会就是如此！想办法让这份不甘释怀，在释怀后再思考，既然社会的洪流摆布了自己，拿自己该如何在这洪流中游动，你们应该学过方法了。也不必总是正面面对，就算避难，躲起来也没事，只要不犯规，奇袭也可以，使用非常规的武器也可以，保持干劲，不要急躁，不要自暴自弃，只要反复尝试，终有一日美好的结果一定会到来的。</p>
+</blockquote>
+<p>上面这个是极影字幕社翻译的，下面再摘抄网上找的。</p>
+<blockquote>
+<p>你们在未来的人生中，肯定会被强大的社会洪流阻挠，导致一些事无法如意。那种时候，不要在社会中寻找原因，不能否定社会，那样直白来说就是浪费时间。每当这时请抱着「社会就是这么回事」的心情来平复自己不甘心的情绪，冷静之后再作考虑。既然社会的激流如此颠簸，那自己又该如何激流勇进呢。不必一直正面迎战，避难或躲藏都行，使出超出常识的武器也可以，怀抱斗志，不急躁，不泄气，不断重复改正试错，这样一定能得到好结果…但是，无论多巧妙回避正面战斗的战士，人生必定有几次不得不全力而战的时候！</p>
+</blockquote>
+<p>今天又稍微查了下，pelican，hexo， octopress，jekyll，好像对markdwon的emoji支持的好像都不如github上面的，是否要研究改进下这个呢，感觉是个好的开源项目耶，除了pelican，其他的对~~删除~~好像支持的挺好。</p>
+<p>每天来所里，感觉怪怪的，干什么老要躲着老师，赶紧干完实验室的活吧！</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-06(Saturday) 00:00.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-25(Thursday) 21:16.</h6>
 </article>
 
 <hr/>
