--- a/8-28.html
+++ b/8-28.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -108,10 +108,24 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>使用Pelican搭建博客系统2</h2>
-	
+	<h2>8-28</h2>
+	<h3 id="_1">每日一水</h3>
+<p>上次写的时候是8月25日，也就是周四晚上。周五应该写的，但是没有编写。周五晚上高中的同学过来一起去吃饭，直到凌晨3点多才回去，我都意识模糊了！但是很爽，好兄弟，一辈子！对，我想起来了，老罗去出差了，周三没有去，周四来了，对啊，赵老师周四下午还找他们谈话了呢！周五上午好像来的比较迟，下午4层有讲座，去看了一下，感觉没意思，就撤了！还把师弟的水杯落哪里呢！吃饭回来，老师还跟我讨论下，然后就走了，去打羽毛球，换鞋，然后就去吃饭了！然后真晕乎，直接到周六中午了，吃完饭，还想回宿舍睡觉！然后下午在所里见了彬哥，晚上吃家乐福那边吃饭，好贵啊，关键是质量不高啊！白花钱了！晚上又做了一题，回去。 然后就是今天上午，赶着做题，然而我感觉晕乎的时候，我居然提交过了，然后也没拿到奖品！下午还是做apac test，自己还是老水平，感觉自己没啥提高啊！晚上的时间有点浪费！</p>
+<p>要注意一下几点：<br />
+1. 是时候开始认真准备了，首先是英语，单词和听力。<br />
+2. 认真，静下心来，看几本书，对，就看之前师兄师姐推荐的那几本书。<br />
+3. 记录一下，时间线，什么时候该做什么，什么时候拿到多少offer，什么时候该去面什么，该去准备什么，这个非常重要。<br />
+4. 到底该准备什么岗位，是研发还是算法，查清楚，及早做准备。<br />
+5. 天池大数据，到底要不要搞，做一下呢？！隔壁师兄中间件大赛一等奖，还有大叔据第三，好厉害啊。<br />
+6. hihocoder的offer收割赛，有事还是准备一下，好好做一下，用处挺大，听师兄说，做的好的，会有师兄打电话进行面试的。<br />
+7. 基本上是8月15之前，所有内推基本上都结束了，包括bat。<br />
+8. 好像是周五的时候， 听师兄说拿到搜狐的offer。好像还有今日头条。<br />
+9. 今天下午师兄去面爱奇艺。bat都面完了，谈话间听说面网易被刷，还有隔壁师兄去indeed日本面试了，好厉害啊。还有hulu，linkedin。其他的想起来再补充。<br />
+10. 开始准备坐lintcode，同时把leetcode的hard题目做完。<br />
+11. 查到什么cc 150， ctci，应该是这个，有时间做做。</p>
+<p>搜集信息的能力很重要，多听，多思考，及早做准备。就这样吧，还想去理发呢！</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-11(Thursday) 11:28. Tags: <a href="https://y119777.github.io/tag/python.html">python</a>, <a href="https://y119777.github.io/tag/pelican.html">pelican</a>, </h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-28(Sunday) 20:59.</h6>
 </article>
 
 <hr/>
