--- a/8-31-summary.html
+++ b/8-31-summary.html
@@ -108,21 +108,30 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>8-25</h2>
-	<h3 id="_1">随便写写</h3>
-<p>今天星期四，晚上准时看完&lt;火影忍者&gt;，然后想着之前要找一下&lt;暗杀教室&gt;里面的一段的经典对话，看这些日本动漫，感觉真是一种享受，画面精美，bgm超赞，最重要的是寓意非常深刻，无不反映出生活的方方面面，真的是太棒了！</p>
-<p>下面摘自&lt;暗杀教室&gt;:</p>
-<blockquote>
-<p>你们在今后的人生中，必定会碰上被强大的社会洪流阻挠，无法得到理想结果的情况，届时，你们绝不能在社会上找原因，绝不能否定社会，说实话，那就是在浪费时间，这种时候呢，就要对自己说：社会就是如此！想办法让这份不甘释怀，在释怀后再思考，既然社会的洪流摆布了自己，拿自己该如何在这洪流中游动，你们应该学过方法了。也不必总是正面面对，就算避难，躲起来也没事，只要不犯规，奇袭也可以，使用非常规的武器也可以，保持干劲，不要急躁，不要自暴自弃，只要反复尝试，终有一日美好的结果一定会到来的。</p>
-</blockquote>
-<p>上面这个是极影字幕社翻译的，下面再摘抄网上找的。</p>
-<blockquote>
-<p>你们在未来的人生中，肯定会被强大的社会洪流阻挠，导致一些事无法如意。那种时候，不要在社会中寻找原因，不能否定社会，那样直白来说就是浪费时间。每当这时请抱着「社会就是这么回事」的心情来平复自己不甘心的情绪，冷静之后再作考虑。既然社会的激流如此颠簸，那自己又该如何激流勇进呢。不必一直正面迎战，避难或躲藏都行，使出超出常识的武器也可以，怀抱斗志，不急躁，不泄气，不断重复改正试错，这样一定能得到好结果…但是，无论多巧妙回避正面战斗的战士，人生必定有几次不得不全力而战的时候！</p>
-</blockquote>
-<p>今天又稍微查了下，pelican，hexo， octopress，jekyll，好像对markdwon的emoji支持的好像都不如github上面的，是否要研究改进下这个呢，感觉是个好的开源项目耶，除了pelican，其他的对~~删除~~好像支持的挺好。</p>
-<p>每天来所里，感觉怪怪的，干什么老要躲着老师，赶紧干完实验室的活吧！</p>
+	<h2>8-31-summary</h2>
+	<p>刚才看完&lt;弹丸论破&gt;未来篇第八集，感觉剧情好悲伤，二次元的妹子好漂亮啊，动漫的人物真是很悲情，一个是遵守自己的信念，一个是遵守自己<br />
+对朋友的诺言，一个是为了自己的利益，一个是为了信念不顾自己的声明，刻画的真是完美！然后<br />
+看完就想到写一下总结，好久没写了。</p>
+<p>刚才跟同学交流，爆搜的复杂度，每个位置都有100种可能，100个位置，不管怎么剪枝，都会超时tle，所以肯定是动态规划，我怎么没想到这一点呢，还自信慢慢可以做！感觉自己真是逗人，丢人！还有大数据比赛，算法刷题，redis，web services，到底怎么搞，怎么办！</p>
+<p>注册了博客园，感觉题光做来不行，看来还要讲清楚才是最关键的！周日作比赛ac过的答案，居然现在被卡掉了，果然，咸鱼也是要有梦想的，大胆就敢交！现在还不清楚是什么思路！</p>
+<p>看了师兄的简历，很棒！听他们将找工作的事情，真的好羡慕啊，自己到底该怎么办！今天晚上好像是他们的百度机试时间，还想是内推的！今天下午开学典礼，又要交学费了，感觉好悲伤啊！</p>
+<p>好烦啊，我感觉真是够了，一会是你刷了几遍，一会是你做了多少道，感觉尽是嘲讽，感觉真是搞笑，那我也不玩了，以后你们问什么，我真是不想再说了，我自己做我自己的，我走好自己的路，管你们做什么！感觉真扯淡，没有你们，地球不转了么！还有一说什么，马上就转出去了，感觉比广播还快！哎！都是泪啊！自古深情留不住，总是套路得人心啊！</p>
+<p>制定如下几点计划：<br />
+1. 早起背英语单词，以及找时间训练英语听力。这个根据合适的时间进行调整。<br />
+2. 看书，要看那几本书，大概多长时间看到哪里，什么进度，什么计划。<br />
+3. 刷题，系统性的刷题。有时间把以前的cf的比赛做一下，感觉质量很高，很锻炼思维，题解也很好，锻炼一下英语。<br />
+4. 大数据比赛参加，中间件的有时间也参加一下。<br />
+5. 开源项目，有时间参与一下别人的醒目，学习一下memcache，redis。<br />
+6. 还有什么，还需要做些什么。git还是熟悉的不全，好好学习下全部的命令。<br />
+7. 说道git，当然就是好好学习一下linux命令，bash， shell， 各种知识综合性的学习一下。<br />
+8. 把c++作为自己的主要语言，好好学习一下，有什么特性，先是深入理解2本书，c++11， boost， 以及c++14，pbds，有时间就学习一下。<br />
+9. 对啊，选课的时候没怎么选图像处理的，以及多媒体，media，还有深度学习，最近看见大脚都在搞什么人脸识别， 深度学习搞图像处理，caffe， fastRcnn，感觉自己都不会。<br />
+10. 听师哥说，深度神经网络喜欢招博士，好像推荐系统和搜索，检索处理，挺占优势。</p>
+<p>下午师兄去面京东了，看他的样子，感觉还不错！还是自己的多在意一些，怎么合理安排时间，把这些事情有节奏的都做完。时间是有限的，尽量去做一些收益打的事情。<br />
+题是需要不停的刷的，一天不刷，脑袋就会僵硬，再做题就会没什么感觉。抓紧时间把hard刷完吧！动态规划还是多练一些。多掌握一些套路，这样在遇到新的套路的<br />
+时候才能想出来怎么做。</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-25(Thursday) 21:16.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-31(Wednesday) 22:38.</h6>
 </article>
 
 <hr/>
