--- a/9-5-summary.html
+++ b/9-5-summary.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -109,10 +109,29 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>使用Pelican搭建博客系统</h2>
-	
+	<h2>9-5-summary</h2>
+	<h3 id="_1">随便写写</h3>
+<p>好久没有写了，上次写的时候是8月31日，上周三晚上，现在是新的一周，星期一。感觉什么都没做。</p>
+<p>说好的要早起背英语呢，说好的新的学期9月份开始，要有什么不一样呢，那些计划感觉一点也没实施。说是<br />
+等9月份了，完全按照计划，步入节奏，但是感觉没什么行动。</p>
+<p>周四做了些什么，对，周四师弟们都回去报道了，晚上看了火影忍者。周四那天早上手机没有话费了，还专门花了<br />
+一些时间来研究怎么充值，而且早上都没有吃饭。 周五上午，来的实验室有点晚，感觉早上<br />
+一天比一天来的晚，完全没有节奏。上午改了改代码，下午基本上就开始写周报，还测试了下几组数据。晚上自己一个<br />
+人去吃的饭，这天中午吃饭的时候还把饭卡弄丢了。哎，真是的！晚上大概6点半左右，又重新训练了一个模型文件，然后交给<br />
+老师测试。</p>
+<p>周六早上也起的很迟，舍友也是一早起来，就去刷题，然后去实验室，没有门禁卡，感觉真是不方便。最近记性<br />
+真是越来越不行了，什么都想不起来了，需要加强锻炼，合理作息，健康生活。上午刷了一会题，下午呆了一会，老师居然来了，下午和晚上<br />
+都去打了会乒乓球，自己打的真是很水，姿势确实很难看，但是我真的不会打。然后周日，上午做了一会题，中午去吃的坛肉饭，下午<br />
+去听讲座，晚上刷了会leetcode的contest，这次大神比较多，可能上次的比赛，大家都不怎么知道，然后这次就很多人，题目是四道medium的<br />
+题，感觉自己还是写的不熟练，一些套路不能立马写出来，罚时罚了好久，就这样吧。</p>
+<p>然后今天上午就写这个，然后感觉什么也没做，时间就过去了，时间过得可真快！抓紧时间，合理计划，不要着急，坚持，达不到要求<br />
+的下次慢慢改进。</p>
+<p>然后是上周的再简单写一下：周一公司的人来，什么也没做，周二上午老师开会，下午老师发了一些测试数据，进行测试。周三就完成那几个任务，<br />
+对，周三下午参加开学典礼，恰巧老师也不再，周四上午忙着手机，下加入新数据，测试，训练新模型，周五改新的代码，下午写周报。</p>
+<p>刚才说，要做的，看一下leetcode，stack的题目，解析类的题目，感觉自己不是很熟练，代码又丑又长，学习一下别人的代码规范，然后<br />
+是上周的比赛那个题目再次思考一下，不是昨天的。就这样吧，有时间在写！感觉脑子真是不够用了。</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/joey-huang.html">Joey Huang</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-07(Sunday) 22:20. Tags: <a href="https://y119777.github.io/tag/python.html">python</a>, <a href="https://y119777.github.io/tag/pelican.html">pelican</a>, </h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-09-05(Monday) 10:25.</h6>
 </article>
 
 <hr/>
