--- a/9-6-summary.html
+++ b/9-6-summary.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -109,10 +109,28 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>使用Pelican搭建博客系统</h2>
-	
+	<h2>9-6-summary</h2>
+	<p>说好的，今天要写总结呢！每天是晚上走之前写总结，还是第二天早上来了再写总结，感觉<br />
+好麻烦啊，但是不写的话，感觉又缺少点什么，一天糊涂的度过，总是不好的。</p>
+<p>昨天干了些什么，昨天好像老师一天都没来，我都想不起来了！这是晚睡的后果么，记忆力减退！<br />
+昨天上午完善了下系统，中午第一次回学校吃饭，下午做什么了，完全没印象！还有晚上是帮<br />
+师兄做了一下机试题，感觉自己真是水！基础知识不是很熟悉，有时间总结一下这些题目，为<br />
+自己做准备！</p>
+<p>上午研究了下新数据，然后后来让我搞java的train，然后下午主要搞这个，师妹叫我同步代码，<br />
+加上陀螺仪的，晚上就是猿题库，滴滴，还有腾讯的宣讲会，好好学习，还偷了个企鹅工仔！</p>
+<p>查看浏览器的浏览记录，这样能帮助自己最好的回忆起一些事情吧！</p>
+<p>要做的事情：<br />
+1. 回忆一下做的题目，有时间网上搜索一下题目，说不定能找到真题，然后自己练习提高。<br />
+2. activity的生命周期，如何销毁activity，如何销毁创建多个activity的activity。<br />
+3. 为什么要创建服务，service，那个manifest的作用是什么，好像名字不对，多线程的实现方式有几种，<br />
+实现同步的方式有几种，bolb属性，什么去掉下划线，<br />
+4. 数据库连接操作，null，有什么结果。<br />
+3. 叫师姐发一下今晚的题目。<br />
+4. 今天的是真难，组合优化的题目，longsumtozero，prices_lucky，thread知识，概率题，网络题，<br />
+5. 以后做的时候，有机会就用手机把题目拍下来，然后自己研究一下。<br />
+5. 还要买火车票。</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/joey-huang.html">Joey Huang</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-07(Sunday) 22:20. Tags: <a href="https://y119777.github.io/tag/python.html">python</a>, <a href="https://y119777.github.io/tag/pelican.html">pelican</a>, </h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-09-06(Tuesday) 09:51.</h6>
 </article>
 
 <hr/>
