--- a/9-11.html
+++ b/9-11.html
@@ -70,9 +70,9 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/test.html">test</a></li>
+							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
 
@@ -109,10 +109,24 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>使用Pelican搭建博客系统2</h2>
-	
+	<h2>9-11</h2>
+	<h3 id="_1">随便写写</h3>
+<ol>
+<li>周报没有写</li>
+<li>总结没有写</li>
+<li>题做得模模糊糊</li>
+<li>模型和apk没有更新。</li>
+</ol>
+<p>水平还是那么次，本来上午leetcode的比赛排名16的，后来rejudge以后，排名64.哎，真是弱！<br />
+昨天上午在实验室做题，下午帮师兄做，教师节也没去北邮参加集会！感觉自己真是的，要不要这样！<br />
+笔试就是这样，各方面的知识，概率，期望，程序运行结果，数据边界对齐情况，操作系统的知识，<br />
+网络的知识，数据库的知识，数据结构，前序，后序，中序。真是菜！</p>
+<p>晚上学习了一下新的套路，具体实现思路还是sparse table，加上一些改变，就是父亲的父亲，然后<br />
+加上快速幂乘法，也就是binary exponentiation,掌握了没有，说是在lca里面也可用，没有找见，<br />
+还有terary search，binary search也可以吧！</p>
+<p>遇到题目，多分析各种情况，然后不断改进，不要着急。</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-11(Thursday) 11:28. Tags: <a href="https://y119777.github.io/tag/python.html">python</a>, <a href="https://y119777.github.io/tag/pelican.html">pelican</a>, </h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-09-11(Sunday) 22:58.</h6>
 </article>
 
 <hr/>
