--- a/9-16-summary.html
+++ b/9-16-summary.html
@@ -70,7 +70,7 @@
 							<li><a href="https://github.com/">Github</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
@@ -108,11 +108,65 @@
 					<div class="row">
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
-	<ul>
-		<li><a href="https://y119777.github.io/category/diary.html">diary</a></li>
-		<li><a href="https://y119777.github.io/category/hide.html">hide</a></li>
-		<li><a href="https://y119777.github.io/category/test.html">test</a></li>
-	</ul>
+<article>
+	<h2>9-16-summary</h2>
+	<h3 id="_1">总结</h3>
+<p>好久没写了，来灌水吧！</p>
+<p>感觉还是迷茫，自己这样做，到底是否是正确的！我很怀疑，到底该怎么办！一直在cf上面做题，<br />
+也不是办法，自己怎么提高！先简单回顾一下这周都做了什么。星期一，老师好像没有来，但听说<br />
+星期二要出差，上午搞一下项目，计划那天赶紧搞完。对，那天老师急着要加入火车的，但是<br />
+训练工程突然发现很多问题。星期二，早上准备做题，老师就来了！上午讨论，下午做自己的事情。<br />
+星期三，上午做什么，忘了，下午进行讨论，然后就放假了。星期四，了解下android的异步任务，<br />
+就是线程相关的知识，还是不清楚线程池的使用。晚上去5层玩了会狼人杀。今天来所里，做题，也没<br />
+做什么。</p>
+<ol>
+<li>不能只做cf，要做其他的进行提高。</li>
+<li>光刷题不行，还需要提高项目知识，其他能力也很重要。</li>
+<li>说要看那几个源代码，也没有花时间去看。</li>
+<li>现在到处都是武林秘籍，看你怎么学习。这句话很正确。确实，这么多刷题网站，这么多学习的课程资源，<br />
+需要自己去学习，去掌握，去不断提高。</li>
+</ol>
+<p>简单列出来有如下几个网站。<br />
+1. 第一类，是各种在线学习网站，慕课，网易云课堂之类，这种app手机上下载，没事的时候看一看，学习一下。<br />
+2. 下面主要是刷题网站，leetcode，很经典，基本上是做题，现在每周有比赛，好像也有课程，也有文档说明，还有<br />
+专项计划，这个有时间学习一下。我现在的目标是：先做完hard的题目，尽快完成。坚持参加周赛。加锁的题目暂时不做了。<br />
+3. hackrank，简称hr，这个也有月计划，30 days of code,10 days of code,还有算法，后台之类的，还有week code，每天<br />
+一题之类的。我感觉这个网站上的题目有点难。<br />
+4. hihocode，以前做的，一周一题，也相当于一周一个知识点，我基本上算在这里入门的，好久没有在这里做了。听说好多<br />
+公司在这上面，有比赛，做过了，公司会打电话给你面试。<br />
+5. usaco，美国中学生编程竞赛网站，只做到第三章，没再做，也是推荐入门，好多基础题目的训练。<br />
+6. 题目很多，有梯子训练，可以慢慢爬，专项训练，我还没开始做，感觉有时间，好好做一下。<br />
+7. codeforce，简称cf，可以参加比赛，练手，有难度，读英语题解，锻炼自己的英语能力。查了一下，是自己<br />
+大学入学那会建立的网站，后悔自己没有跟着做，大学四年也不知道这个网站，而所谓cf也不过是crossfire罢了。<br />
+8. codejam，自己就做一下apactest，划一下水，有难度，大数据基本上没想法，如果没有训练过，真的会很难。<br />
+9. 赛码网，最近好多公司都在上面做题，感觉还不错，有专门的知识训练，加上基础知识的训练，很好，<br />
+我感觉不能光关注做题这里，更多的关注一些考点，非常重要。这上面还有各个公司笔试的时间安排，真的很棒。<br />
+10. 牛客网，也是公司笔试的网站，有算法，基础知识，感觉挺好，面向国内互联网公司，跟上面的一起做。<br />
+11. 接下我所知道就是poj，一亩三分地，水木，北邮人论坛，zoj，virtual judge，acdream之类的，感觉没有必要去做，上面的<br />
+就足够了，也没有那么多的时间去做。<br />
+12. 抓紧时间，学好英语，走遍世界都不怕！<br />
+13. github上面学习一些源码，比如redis，参与一些开源项目，锻炼一下自己的编码规范，git的熟练使用。</p>
+	<hr/>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-09-16(Friday) 22:38.</h6>
+</article>
+
+<hr/>
+<div class="row">
+	<div class="small-12 columns">
+		<h3>Comments</h3>
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+			var disqus_shortname = 'y119777';
+			(function() {
+				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+	</div>
+</div>
 						</div>
 						<!-- End Main Content -->
 						<!-- Sidebar -->
