--- a/9-16-summary.html
+++ b/9-16-summary.html
@@ -145,7 +145,10 @@
 11. 接下我所知道就是poj，一亩三分地，水木，北邮人论坛，zoj，virtual judge，acdream之类的，感觉没有必要去做，上面的<br />
 就足够了，也没有那么多的时间去做。<br />
 12. 抓紧时间，学好英语，走遍世界都不怕！<br />
-13. github上面学习一些源码，比如redis，参与一些开源项目，锻炼一下自己的编码规范，git的熟练使用。</p>
+13. github上面学习一些源码，比如redis，参与一些开源项目，锻炼一下自己的编码规范，git的熟练使用。<br />
+14. 看一下师兄师姐们共享的算法学习视频。<br />
+15. 学习一下师兄师姐们的计划，安排，什么好的习惯，学习一下，这也需要自己的观察和学习。<br />
+16. 抓紧时间看一下书，课本要好好看。</p>
 	<hr/>
 	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-09-16(Friday) 22:38.</h6>
 </article>
