--- a/index3.html
+++ b/index3.html
@@ -71,7 +71,7 @@
 							<li><a href="http://www.cnblogs.com/y119777/">我的博客园</a></li>
 
 						<li><label>Categories</label></li>
-							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
 							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
@@ -110,45 +110,33 @@
 					<div class="row">
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
-<article>
-	<h2>apactest summary</h2>
-	<blockquote>
-<p>稍微总结下昨天下午做的题吧！</p>
-</blockquote>
-<p>当然，第一题都是水过，但是我英语太差，半天才读懂题意，读懂后，感觉大致是这个套路，然后就做了，然后就ac了，我提交记录是13分钟左右，感觉就是这样，上几次，也差不多，读懂题意，然后做就行，大概不需要怎么思考，以前有最短路，还有字符串处理等等。</p>
-<p>然后第二题基本上属于数论题，然后n比较大，考虑怎么优化。我当时的想法是，先把小数据过了再说，因为小数据的n范围只到1000，所以可以满足时间要求，然后直接算出所有结果，然后进行枚举即可。然后小数据就过了，大数据n是10的18次方，枚举肯定超时，然后我就做下一题了。</p>
-<blockquote>
-<p>刚才看第二题的大神的题解，恍然大悟，我之前也有这样的想法，因为最后要对k取余，k的最大值只有1w，然后只用枚举这些值就可以了，但我当时感觉自己花时间在这上面，不一定能解出来，可能浪费时间，而且对自己的想法不是很确定，所以就跳过了。看题解，就是这样，但是有一些小trick，数个数的时候0的话要减一，以及怎么去除相同的数，这些都需要仔细思考，现在知道怎么做了，仔细思考，琢磨琢磨，应该可以做出来，这类题也就是这样的套路，求余数，就是可以把求余操作放到任意地方，然后进行优化，数据范围很大，不能枚举，然后就猜：肯定只枚举余数，肯定是这样的讨论，难道还有其他的黑科技，我是不清楚。就这样吧！当然，快速幂乘法，应该会写，其实很简单，名字很高大上而已。</p>
-</blockquote>
-<p>第三题，我一看，我感觉也是线段树，但是范围是10^9，难道每个点建一个节点，还是进行离散化，最后线段只有n，小数据是1000，大数据是50w，感觉还是不行，然后就想着暴力小数据，奈何序列生成方法，自以为是，先入为主，没按题目要求来，浪费了好长时间，然后才把小数据过了，-0-，慢慢都是泪啊！</p>
-<blockquote>
-<p>开始看题解！有几个疑问，对线段处理顺序，对线段覆盖重叠怎么处理，感觉不行！一点一点往下看，就是<br />
-离散化的套路么，sort+unique+erase，然后再做处理。就是把旧的区间变换到新的紧密的点之上，因为之前区间很大，变换后最多有2*n个点，只用统计这里面每个区间的点的个数，这里考虑怎么做，弄清楚这里统计的是覆盖数为1的点的个数，以及总覆盖区间的长度，然后计算就行，最后针对每一个原始空间，再映射到新的空间计算，这里采用了区间减法的性质，以及二分法进行查找，所以速度比较快，最后统计。我想的时候，我的想法是计算每个区间单独覆盖的长度，也就是每个区间单独覆盖的点的个数，求出最大值，然后求出总的区间覆盖个数，然后做减法就可以得到最后的结果，但是：我不知道怎么统计，具体的不会太做，而且根本没有想到要进行离散化，真的！左后我的小数据想这样，但考虑到很麻烦，然后就是针对每一个区间，去掉此区间后，然后算出其他区间的覆盖总个数，还想复杂度挺高，但是小数据跑过了。</p>
-<p>关键是计算出离散之后，最多有多少个不同的点，提前计算出来。好像之前做过几道线段之类的题目，<br />
-好像是贴海报，画彩线之类的，忘记了。求出每个区间覆盖为1的个数就行。</p>
-</blockquote>
-<p>第四题，根本没想法啊！先这样吧！感觉自己水平不行，练得还很少，知道的套路有限！比如你根本不知道这种方法，难道你还能凭空创造出来，当然是多练，多试，多学习，下次再次遇到的时候才有可能用上。</p>
-	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-29(Monday) 10:46.</h6>
-</article>
 
-<hr/>
-<div class="row">
-	<div class="small-12 columns">
-		<h3>Comments</h3>
-		<div id="disqus_thread"></div>
-		<script type="text/javascript">
-			var disqus_shortname = 'y119777';
-			(function() {
-				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			})();
-		</script>
-		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+<article>
+	<h3><a href="https://y119777.github.io/test.html">test</a></h3>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/test.html">test</a> on 2016-08-06(Saturday) 00:00.</h6>
+	<h3 id="test">test</h3>
+<p>adadas<br />
+1. a<br />
+2. b<br />
+3. c</p>
+		<p class="continue"><a href="https://y119777.github.io/test.html">阅读全文 &raquo;</a></p>
+</article>
+<hr />
+
+<div class="row" style="margin-bottom: -1.25em;">
+	<div class="small-12 columns text-center">
+		<div class="pagination-centered">
+			<ul class="pagination">
+				<li class="arrow"><a href="https://y119777.github.io/index2.html">&larr; Previous</a></li>
+				<li class=""><a href="https://y119777.github.io/index.html">1</a></li>
+				<li class=""><a href="https://y119777.github.io/index2.html">2</a></li>
+				<li class="current"><a href="https://y119777.github.io/index3.html">3</a></li>
+				<li class="arrow unavailable"><a href="#">&rarr; Next</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
+
 						</div>
 						<!-- End Main Content -->
 						<!-- Sidebar -->
