--- a/9-26.html
+++ b/9-26.html
@@ -111,25 +111,17 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>apactest summary</h2>
-	<blockquote>
-<p>稍微总结下昨天下午做的题吧！</p>
-</blockquote>
-<p>当然，第一题都是水过，但是我英语太差，半天才读懂题意，读懂后，感觉大致是这个套路，然后就做了，然后就ac了，我提交记录是13分钟左右，感觉就是这样，上几次，也差不多，读懂题意，然后做就行，大概不需要怎么思考，以前有最短路，还有字符串处理等等。</p>
-<p>然后第二题基本上属于数论题，然后n比较大，考虑怎么优化。我当时的想法是，先把小数据过了再说，因为小数据的n范围只到1000，所以可以满足时间要求，然后直接算出所有结果，然后进行枚举即可。然后小数据就过了，大数据n是10的18次方，枚举肯定超时，然后我就做下一题了。</p>
-<blockquote>
-<p>刚才看第二题的大神的题解，恍然大悟，我之前也有这样的想法，因为最后要对k取余，k的最大值只有1w，然后只用枚举这些值就可以了，但我当时感觉自己花时间在这上面，不一定能解出来，可能浪费时间，而且对自己的想法不是很确定，所以就跳过了。看题解，就是这样，但是有一些小trick，数个数的时候0的话要减一，以及怎么去除相同的数，这些都需要仔细思考，现在知道怎么做了，仔细思考，琢磨琢磨，应该可以做出来，这类题也就是这样的套路，求余数，就是可以把求余操作放到任意地方，然后进行优化，数据范围很大，不能枚举，然后就猜：肯定只枚举余数，肯定是这样的讨论，难道还有其他的黑科技，我是不清楚。就这样吧！当然，快速幂乘法，应该会写，其实很简单，名字很高大上而已。</p>
-</blockquote>
-<p>第三题，我一看，我感觉也是线段树，但是范围是10^9，难道每个点建一个节点，还是进行离散化，最后线段只有n，小数据是1000，大数据是50w，感觉还是不行，然后就想着暴力小数据，奈何序列生成方法，自以为是，先入为主，没按题目要求来，浪费了好长时间，然后才把小数据过了，-0-，慢慢都是泪啊！</p>
-<blockquote>
-<p>开始看题解！有几个疑问，对线段处理顺序，对线段覆盖重叠怎么处理，感觉不行！一点一点往下看，就是<br />
-离散化的套路么，sort+unique+erase，然后再做处理。就是把旧的区间变换到新的紧密的点之上，因为之前区间很大，变换后最多有2*n个点，只用统计这里面每个区间的点的个数，这里考虑怎么做，弄清楚这里统计的是覆盖数为1的点的个数，以及总覆盖区间的长度，然后计算就行，最后针对每一个原始空间，再映射到新的空间计算，这里采用了区间减法的性质，以及二分法进行查找，所以速度比较快，最后统计。我想的时候，我的想法是计算每个区间单独覆盖的长度，也就是每个区间单独覆盖的点的个数，求出最大值，然后求出总的区间覆盖个数，然后做减法就可以得到最后的结果，但是：我不知道怎么统计，具体的不会太做，而且根本没有想到要进行离散化，真的！左后我的小数据想这样，但考虑到很麻烦，然后就是针对每一个区间，去掉此区间后，然后算出其他区间的覆盖总个数，还想复杂度挺高，但是小数据跑过了。</p>
-<p>关键是计算出离散之后，最多有多少个不同的点，提前计算出来。好像之前做过几道线段之类的题目，<br />
-好像是贴海报，画彩线之类的，忘记了。求出每个区间覆盖为1的个数就行。</p>
-</blockquote>
-<p>第四题，根本没想法啊！先这样吧！感觉自己水平不行，练得还很少，知道的套路有限！比如你根本不知道这种方法，难道你还能凭空创造出来，当然是多练，多试，多学习，下次再次遇到的时候才有可能用上。</p>
+	<h2>9-26</h2>
+	<h3 id="_1">随便写写</h3>
+<p>好久没写来，来灌水吧！</p>
+<p>上一次写是9月16日，一下就过去了10天。中间还夹杂了中秋节。而且，这周末就国庆了。真是着急着为祖国母亲庆生啊！</p>
+<p>这之间发生了很多事情，主要是上周的笔试太多了，基本上每天下午都有笔试，好像还有一天还几次笔试！其实我想好好干活的，无奈被师兄师姐拉去做题！我真的太菜了。其实，我对做这些题是有意见的，一个是当场做不出来的话，结束再去做的话，根本没有机会测试你的程序的正确性，也无法发现正确的答案，无法进行总结和提高，如果做出来，那还挺好。基本上暴力，加上测试的数据很弱，基本上都能过。除了一些变态公司的题目，考察最大流最小割，我都不想说什么了！ </p>
+<p>感觉自己还是有差距，这些题目并不能完全做出来，还是不熟练，做得少，套路浅。还有基本知识练习的少，尤其是c++的指针，引用，继承，虚函数，之类的不是很熟悉，还有大端小端，以及程序的运行结果，这类题目很多！现场不可能去敲这些题目，只有靠自己判断。还有，学习系统设计，分布式系统，开源项目。还有智力题，找规律等。</p>
+<p>对，师兄给我说的面试经验，我都没怎么总结。比如写strcpy，考虑什么边界条件，不考虑异常情况的代码谁不会写啊，谁让你写这个，io怎么复用，线程，linux内核，缓冲怎么搞，看完师兄说的那几本书，epoll，还有概率题，组合排列题，智力题，都需要练，进行提高。就是考察编程，考察分析问题，解决问题的能力，遇到问题，怎么转化，（分享的有猿题库，360，爱奇艺，粉笔，京东）好像就这几个，后续有的话在进行记录。</p>
+<p>感觉他们真是扯淡，关你屁事，听他们说什么，有意思么，自己做好自己的事情！好好学习，毕竟各走各的路，别人能给你找工作，别人优势比你大多了，你管这些干嘛，努力提高自己的技能吧！</p>
+<p>今天参加了wap和斯伦贝谢的宣讲会，好好参加吧！</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-08-29(Monday) 10:46.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-09-26(Monday) 22:46.</h6>
 </article>
 
 <hr/>
