--- a/10-2-summary.html
+++ b/10-2-summary.html
@@ -71,8 +71,8 @@
 							<li><a href="http://www.cnblogs.com/y119777/">我的博客园</a></li>
 
 						<li><label>Categories</label></li>
-							<li ><a href="https://y119777.github.io/category/diary.html">diary</a></li>
-							<li class="active"><a href="https://y119777.github.io/category/hide.html">hide</a></li>
+							<li class="active"><a href="https://y119777.github.io/category/diary.html">diary</a></li>
+							<li ><a href="https://y119777.github.io/category/hide.html">hide</a></li>
 							<li ><a href="https://y119777.github.io/category/test.html">test</a></li>
 
 
@@ -112,10 +112,19 @@
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
 <article>
-	<h2>About</h2>
-	<h2 id="_1">贵在持之以恒！</h2>
+	<h2>10-2-summary</h2>
+	<h3 id="_1">随便写写</h3>
+<p>开学，已经过去2个月了。时间过得可真快！感觉自己也没什么提高！每天做的事情到底有没有<br />
+意义，我真的不是很清楚。我的编程水平真是太水了，昨天晚上只做出来一道题，本来可以做出2<br />
+道题的，只因为自己的疏忽，检查不出来小问题。今天上午的leetcode周赛，只做出来2道题，另外2<br />
+道题根本没思路，难道我就只能到这个地步了么！应该怎么办，我应该朝着什么方向努力，我真的很<br />
+迷茫！同时，这次英语6级考试还没报上名，这可是是个大问题，关系到明年的找工作和内推，实习。真的，<br />
+本科没有考过去6级，真的是最大的缺点！谁想到现在这么麻烦。</p>
+<p>记录这些的意义，包括最近状态不是很好，我希望能静下心来，好好总结一下，究竟哪里做的不对，应该怎么<br />
+办。这些非常重要！</p>
+<p>晚上就要坐火车回家了，好好休整一下，前进的路上，是时候冷静一下，反思自己。就这样吧！</p>
 	<hr/>
-	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/hide.html">hide</a> on 2016-08-07(Sunday) 16:12.</h6>
+	<h6>Post by <a href="https://y119777.github.io/author/yuan.html">yuan</a> under <a href="https://y119777.github.io/category/diary.html">diary</a> on 2016-10-02(Sunday) 19:02.</h6>
 </article>
 
 <hr/>
